2004-10-30 Umadevi S <sumadevi@novell.com>
	* Tds.cs : GetColumnValue method: handling null guid values correctly.
		This fixes bug #68804. 
		Thanks for the patch /bug report by Aleksandar Dezelin

2004-10-14 Umadevi S <sumadevi@novell.com>
	* Tds.cs : GetTextValue method- handling zero length string correctly
		This fixes bug #67916

2004-08-14 Geoff Norton <gnorton@customerdna.com>

	* TdsComm.cs: 
          Tds70.cs: 
                Make Tds70 work on Big Endian machines.
		BitConverter uses unsafe and returns things in host order; we need to 
		swap some values to put them back into the approrpiate order for the wire.

2004-08-09 Sureshkumar T <tsureshkumar@novell.com>
	* Tds70.cs - Prepare Method stored procedure handle read problem fixed.

2004-06-30 Umadevi S <sumadevi@novell.com>
	* Tds.cs - In the NextResult method handling TdsPacketSubType. TableName. 


2004-04-22  Sebastien Pouliot <sebastien@ximian.com> 

	* Tds70.cs: Updated to match changes in Mono.Security.dll.

2004-04-05  Lluis Sanchez Gual  <lluis@ximian.com>

	* ITds.cs: Added method for reseting a connection.
	* Tds.cs: Added base implementation for ITds.Reset.
	* Tds70.cs: Implemented ITds.Reset().
	* TdsConnectionPool.cs: Implemented connection pool that can be reused by 
	  all Tds clients.

2004-04-01  Lluis Sanchez Gual  <lluis@ximian.com>

	* Tds.cs: All methods now return DBNull instead of null for null values.
	* Tds50.cs, Tds70.cs: Support parameters with DBNull value.

2003-12-21  Tim Coleman <tim@timcoleman.com>
	* Tds70.cs:
		Fix Integrated Security to work with Domain users.

2003-12-06  Sebastien Pouliot <spouliot@videotron.ca> 
	for Daniel Morgan <danielmorgan@verizon.net>

	Sebastien Pouliot (spouliot@motus.com) helped me greatly with his
	NTLM stuff.
	
	* Mono.Data.Tds.Protocol/Tds.cs
	* Mono.Data.Tds.Protocol/Tds70.cs
	* Mono.Data.Tds.Protocol/TdsConnectionParameters.cs
	* Mono.Data.Tds.Protocol/TdsPacketSubType.cs